Develop (#16)
* mappers + test

* fix getters setters lombok (#1)

* Feature register (#2)

* product controller/service/mapper

* save progress for register + logic of jwt (jwt filter/provider/properties + token dto + security config + User controler/mapper/repository/service)

* register + restructuration des table pour évité les appel circulaire

* login form + controller (#3)

* data init + CRUD (#4)

* verif si l'addresse existe deja en db + verif si l'utilisateur existe (#5)

* swagger config , user controller profil, user servic getUserWithToken

* Fix user profil (#6)

* suppression dependance inutiles

* application.yml

* fonctionnalité role à fixer !

* fix getUser

* Feature create omnitheque (#7)

* suppression dependance inutiles

* application.yml

* fonctionnalité role à fixer !

* fix getUser

* create omnitheque + update user

* fix user

* Feature crud product (#9)

* add product ok

* OK sauf Delete => Fixer les delete en cascade ....

* refactor product form

* fix crud omnitheque

* fix ajout d'un produit => check produits deja existant mais quantity = 0

* suppression import/code inutilisé

* Develop (#8) (#11)

* mappers + test

* fix getters setters lombok (#1)

* Feature register (#2)

* product controller/service/mapper

* save progress for register + logic of jwt (jwt filter/provider/properties + token dto + security config + User controler/mapper/repository/service)

* register + restructuration des table pour évité les appel circulaire

* login form + controller (#3)

* data init + CRUD (#4)

* verif si l'addresse existe deja en db + verif si l'utilisateur existe (#5)

* swagger config , user controller profil, user servic getUserWithToken

* Fix user profil (#6)

* suppression dependance inutiles

* application.yml

* fonctionnalité role à fixer !

* fix getUser

* Feature create omnitheque (#7)

* suppression dependance inutiles

* applicatio