@@ -6,6 +6,8 @@ import be.digitalcity.projetspringrest.models.entities.Omnitheque;
 import be.digitalcity.projetspringrest.models.forms.OmnithequeForm;
 import org.springframework.stereotype.Service;
 
+import java.util.stream.Collectors;
+
 @Service
 public class OmnithequeMapper {
     private final AddressMapper adressMapper;
@@ -26,10 +28,11 @@ public class OmnithequeMapper {
         dto.setPhone(entity.getPhone());
         dto.setEmail(entity.getEmail());
         dto.setAddress(adressMapper.entityToDto(entity.getAddress()));
+        dto.setImage(entity.getImage());
         if(entity.getBorrowList() != null)
-            dto.setBorrowList(entity.getBorrowList().stream().map(borrowMapper::entityToDto).toList());
+            dto.setBorrowList(entity.getBorrowList().stream().map(borrowMapper::entityToDto).collect(Collectors.toList()));
         if(entity.getProductList() != null)
-            dto.setProductList(entity.getProductList().stream().map(productMapper::entityToDto).toList());
+            dto.setProductList(entity.getProductList().stream().map(productMapper::entityToDto).collect(Collectors.toList()));
         return dto;
     }
 
@@ -38,6 +41,7 @@ public class OmnithequeMapper {
         entity.setName(form.getName());
         entity.setEmail(form.getEmail());
         entity.setPhone(form.getPhone());
+        entity.setImage(form.getImage());
         return entity;
     }
 }
